--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -47,7 +47,7 @@
                     android:layout_height="wrap_content"
                     android:text="@string/settings_brightness"
                     android:textColor="@color/main_color"
-                    android:textSize="@dimen/text_size_normal"
+                    android:textSize="@dimen/text_size_big"
                     app:layout_constraintBottom_toTopOf="@+id/settings_frag_appearance_description"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -98,7 +98,7 @@
                     android:layout_height="wrap_content"
                     android:text="@string/settings_performance"
                     android:textColor="@color/main_color"
-                    android:textSize="@dimen/text_size_normal"
+                    android:textSize="@dimen/text_size_big"
                     app:layout_constraintBottom_toTopOf="@+id/settings_frag_performance_description"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -149,7 +149,7 @@
                     android:layout_height="wrap_content"
                     android:text="@string/settings_sensitivity"
                     android:textColor="@color/main_color"
-                    android:textSize="@dimen/text_size_normal"
+                    android:textSize="@dimen/text_size_big"
                     app:layout_constraintBottom_toTopOf="@+id/settings_frag_sensitivity_description"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -200,7 +200,7 @@
                     android:layout_height="wrap_content"
                     android:text="@string/settings_timeout"
                     android:textColor="@color/main_color"
-                    android:textSize="@dimen/text_size_normal"
+                    android:textSize="@dimen/text_size_big"
                     app:layout_constraintBottom_toTopOf="@+id/settings_frag_timeout_description"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -251,7 +251,7 @@
                     android:layout_height="wrap_content"
                     android:text="@string/settings_night"
                     android:textColor="@color/main_color"
-                    android:textSize="@dimen/text_size_normal"
+                    android:textSize="@dimen/text_size_big"
                     app:layout_constraintBottom_toTopOf="@+id/settings_frag_night_description"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
