--- a/app/src/main/res/layout/fragment_settings_brightness_main.xml
+++ b/app/src/main/res/layout/fragment_settings_brightness_main.xml
@@ -67,7 +67,7 @@
                     android:layout_marginLeft="12dp"
                     android:text="@string/settings_brightness_text_brightness"
                     android:textColor="@color/main_color"
-                    android:textSize="@dimen/text_size_normal"
+                    android:textSize="@dimen/text_size_big"
                     app:layout_constraintBottom_toTopOf="@+id/settings_brightness_main_text_brightness_seekbar"
                     app:layout_constraintEnd_toStartOf="@+id/settings_brightness_main_text_brightness_value"
                     app:layout_constraintStart_toStartOf="parent"
@@ -81,7 +81,7 @@
                     android:layout_marginRight="12dp"
                     android:text="0 %"
                     android:textColor="@color/main_color"
-                    android:textSize="@dimen/text_size_normal"
+                    android:textSize="@dimen/text_size_big"
                     app:layout_constraintBottom_toTopOf="@+id/settings_brightness_main_text_brightness_seekbar"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/settings_brightness_main_text_brightness_title"
@@ -139,7 +139,7 @@
                     android:layout_marginLeft="12dp"
                     android:text="@string/settings_brightness_bg_brightness"
                     android:textColor="@color/main_color"
-                    android:textSize="@dimen/text_size_normal"
+                    android:textSize="@dimen/text_size_big"
                     app:layout_constraintBottom_toTopOf="@+id/settings_brightness_main_bg_brightness_seekbar"
                     app:layout_constraintEnd_toStartOf="@+id/settings_brightness_main_bg_brightness_value"
                     app:layout_constraintStart_toStartOf="parent"
@@ -153,7 +153,7 @@
                     android:layout_marginRight="12dp"
                     android:text="0 %"
                     android:textColor="@color/main_color"
-                    android:textSize="20sp"
+                    android:textSize="@dimen/text_size_big"
                     app:layout_constraintBottom_toTopOf="@+id/settings_brightness_main_bg_brightness_seekbar"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/settings_brightness_main_bg_brightness_title"
