--- a/app/src/main/res/layout/fragment_settings_night_main.xml
+++ b/app/src/main/res/layout/fragment_settings_night_main.xml
@@ -36,7 +36,7 @@
                     android:layout_marginLeft="12dp"
                     android:text="Enable when at"
                     android:textColor="@color/main_color"
-                    android:textSize="@dimen/text_size_normal"
+                    android:textSize="@dimen/text_size_big"
                     app:layout_constraintBottom_toTopOf="@+id/settings_night_main_enable_brightness_seekbar"
                     app:layout_constraintEnd_toStartOf="@+id/settings_night_main_enable_brightness_value"
                     app:layout_constraintStart_toStartOf="parent"
@@ -50,7 +50,7 @@
                     android:layout_marginRight="12dp"
                     android:text="0 lx"
                     android:textColor="@color/main_color"
-                    android:textSize="@dimen/text_size_normal"
+                    android:textSize="@dimen/text_size_big"
                     app:layout_constraintBottom_toTopOf="@+id/settings_night_main_enable_brightness_seekbar"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/settings_night_main_enable_brightness_title"
@@ -110,7 +110,7 @@
                     android:layout_marginLeft="12dp"
                     android:text="Disable when at"
                     android:textColor="@color/main_color"
-                    android:textSize="@dimen/text_size_normal"
+                    android:textSize="@dimen/text_size_big"
                     app:layout_constraintBottom_toTopOf="@+id/settings_night_main_disableable_brightness_seekbar"
                     app:layout_constraintEnd_toStartOf="@+id/settings_night_main_disableable_brightness_value"
                     app:layout_constraintStart_toStartOf="parent"
@@ -124,7 +124,7 @@
                     android:layout_marginRight="12dp"
                     android:text="0 lx"
                     android:textColor="@color/main_color"
-                    android:textSize="@dimen/text_size_normal"
+                    android:textSize="@dimen/text_size_big"
                     app:layout_constraintBottom_toTopOf="@+id/settings_night_main_disableable_brightness_seekbar"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/settings_night_main_disableable_brightness_title"
