--- a/app/src/main/res/layout/fragment_settings_performance_main.xml
+++ b/app/src/main/res/layout/fragment_settings_performance_main.xml
@@ -50,7 +50,7 @@
                     android:layout_marginLeft="12dp"
                     android:text="@string/settings_performance_quality_level"
                     android:textColor="@color/main_color"
-                    android:textSize="@dimen/text_size_normal"
+                    android:textSize="@dimen/text_size_big"
                     app:layout_constraintBottom_toTopOf="@+id/settings_performance_main_image_quality_seekbar"
                     app:layout_constraintEnd_toStartOf="@+id/settings_performance_main_image_quality_value"
                     app:layout_constraintStart_toStartOf="parent"
@@ -64,7 +64,7 @@
                     android:layout_marginRight="12dp"
                     android:text="0"
                     android:textColor="@color/main_color"
-                    android:textSize="@dimen/text_size_normal"
+                    android:textSize="@dimen/text_size_big"
                     app:layout_constraintBottom_toTopOf="@+id/settings_performance_main_image_quality_seekbar"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/settings_performance_main_image_quality_title"
