--- a/app/src/main/res/layout/fragment_settings_behavior_card.xml
+++ b/app/src/main/res/layout/fragment_settings_behavior_card.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/grayscale_1">
 
     <TextView
-        android:id="@+id/settings_night_card_title"
+        android:id="@+id/settings_behavior_card_title"
         android:layout_width="0dp"
         android:layout_height="48dp"
         android:layout_marginStart="48dp"
@@ -15,7 +14,7 @@
         android:layout_marginEnd="48dp"
         android:layout_marginRight="48dp"
         android:gravity="center"
-        android:text="Night mode"
+        android:text="@string/settings_behavior"
         android:textColor="@color/main_color"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -29,5 +28,5 @@
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/settings_night_card_title" />
+        app:layout_constraintTop_toBottomOf="@+id/settings_behavior_card_title" />
 </androidx.constraintlayout.widget.ConstraintLayout>
