--- a/app/src/main/res/layout/fragment_settings_behavior_main.xml
+++ b/app/src/main/res/layout/fragment_settings_behavior_main.xml
@@ -2,24 +2,52 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/settings_night_main_root"
+    android:id="@+id/settings_behavior_main_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
     <ScrollView
-        android:id="@+id/settings_night_main_scroll_container"
+        android:id="@+id/settings_behavior_main_scroll_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <LinearLayout
-            android:id="@+id/settings_night_main_scroll_content"
+            android:id="@+id/settings_behavior_main_scroll_content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/settings_night_main_enable_brightness_container"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:padding="12dp">
+
+                <TextView
+                    android:id="@+id/textView3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="0dp"
+                    android:gravity="center_vertical"
+                    android:text="@string/settings_behavior_condition_low_light"
+                    android:textColor="@color/main_color"
+                    android:textSize="@dimen/text_size_small"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <Spinner
+                    android:id="@+id/spinner"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:entries="@array/night_behaviors"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/textView3"
+                    app:layout_constraintTop_toTopOf="parent" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/settings_behavior_main_enable_brightness_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingTop="12dp"
@@ -29,7 +57,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/tabLayout">
 
                 <TextView
-                    android:id="@+id/settings_night_main_enable_brightness_title"
+                    android:id="@+id/settings_behavior_main_enable_brightness_title"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="12dp"
@@ -37,13 +65,13 @@
                     android:text="Enable when at"
                     android:textColor="@color/main_color"
                     android:textSize="@dimen/text_size_big"
-                    app:layout_constraintBottom_toTopOf="@+id/settings_night_main_enable_brightness_seekbar"
-                    app:layout_constraintEnd_toStartOf="@+id/settings_night_main_enable_brightness_value"
+                    app:layout_constraintBottom_toTopOf="@+id/settings_behavior_main_enable_brightness_seekbar"
+                    app:layout_constraintEnd_toStartOf="@+id/settings_behavior_main_enable_brightness_value"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
-                    android:id="@+id/settings_night_main_enable_brightness_value"
+                    android:id="@+id/settings_behavior_main_enable_brightness_value"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="12dp"
@@ -51,23 +79,23 @@
                     android:text="0 lx"
                     android:textColor="@color/main_color"
                     android:textSize="@dimen/text_size_big"
-                    app:layout_constraintBottom_toTopOf="@+id/settings_night_main_enable_brightness_seekbar"
+                    app:layout_constraintBottom_toTopOf="@+id/settings_behavior_main_enable_brightness_seekbar"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/settings_night_main_enable_brightness_title"
+                    app:layout_constraintStart_toEndOf="@+id/settings_behavior_main_enable_brightness_title"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <SeekBar
-                    android:id="@+id/settings_night_main_enable_brightness_seekbar"
+                    android:id="@+id/settings_behavior_main_enable_brightness_seekbar"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:paddingLeft="12dp"
                     android:paddingRight="12dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/settings_night_main_enable_brightness_title" />
+                    app:layout_constraintTop_toBottomOf="@+id/settings_behavior_main_enable_brightness_title" />
 
                 <TextView
-                    android:id="@+id/settings_night_main_enable_brightness_desc_min"
+                    android:id="@+id/settings_behavior_main_enable_brightness_desc_min"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="12dp"
@@ -76,10 +104,10 @@
                     android:textSize="@dimen/text_size_tiny"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/settings_night_main_enable_brightness_seekbar" />
+                    app:layout_constraintTop_toBottomOf="@+id/settings_behavior_main_enable_brightness_seekbar" />
 
                 <TextView
-                    android:id="@+id/settings_night_main_enable_brightness_desc_max"
+                    android:id="@+id/settings_behavior_main_enable_brightness_desc_max"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="12dp"
@@ -88,11 +116,11 @@
                     android:textSize="@dimen/text_size_tiny"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/settings_night_main_enable_brightness_seekbar" />
+                    app:layout_constraintTop_toBottomOf="@+id/settings_behavior_main_enable_brightness_seekbar" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/settings_night_main_disable_brightness_container"
+                android:id="@+id/settings_behavior_main_disable_brightness_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingTop="12dp"
@@ -103,7 +131,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/tabLayout">
 
                 <TextView
-                    android:id="@+id/settings_night_main_disableable_brightness_title"
+                    android:id="@+id/settings_behavior_main_disableable_brightness_title"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="12dp"
@@ -111,13 +139,13 @@
                     android:text="Disable when at"
                     android:textColor="@color/main_color"
                     android:textSize="@dimen/text_size_big"
-                    app:layout_constraintBottom_toTopOf="@+id/settings_night_main_disableable_brightness_seekbar"
-                    app:layout_constraintEnd_toStartOf="@+id/settings_night_main_disableable_brightness_value"
+                    app:layout_constraintBottom_toTopOf="@+id/settings_behavior_main_disableable_brightness_seekbar"
+                    app:layout_constraintEnd_toStartOf="@+id/settings_behavior_main_disableable_brightness_value"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
-                    android:id="@+id/settings_night_main_disableable_brightness_value"
+                    android:id="@+id/settings_behavior_main_disableable_brightness_value"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="12dp"
@@ -125,23 +153,23 @@
                     android:text="0 lx"
                     android:textColor="@color/main_color"
                     android:textSize="@dimen/text_size_big"
-                    app:layout_constraintBottom_toTopOf="@+id/settings_night_main_disableable_brightness_seekbar"
+                    app:layout_constraintBottom_toTopOf="@+id/settings_behavior_main_disableable_brightness_seekbar"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/settings_night_main_disableable_brightness_title"
+                    app:layout_constraintStart_toEndOf="@+id/settings_behavior_main_disableable_brightness_title"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <SeekBar
-                    android:id="@+id/settings_night_main_disableable_brightness_seekbar"
+                    android:id="@+id/settings_behavior_main_disableable_brightness_seekbar"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:paddingLeft="12dp"
                     android:paddingRight="12dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/settings_night_main_disableable_brightness_title" />
+                    app:layout_constraintTop_toBottomOf="@+id/settings_behavior_main_disableable_brightness_title" />
 
                 <TextView
-                    android:id="@+id/settings_night_main_disableable_brightness_desc_min"
+                    android:id="@+id/settings_behavior_main_disableable_brightness_desc_min"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="12dp"
@@ -150,10 +178,10 @@
                     android:textSize="@dimen/text_size_tiny"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/settings_night_main_disableable_brightness_seekbar" />
+                    app:layout_constraintTop_toBottomOf="@+id/settings_behavior_main_disableable_brightness_seekbar" />
 
                 <TextView
-                    android:id="@+id/settings_night_main_disableable_brightness_desc_max"
+                    android:id="@+id/settings_behavior_main_disableable_brightness_desc_max"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="12dp"
@@ -162,7 +190,7 @@
                     android:textSize="@dimen/text_size_tiny"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/settings_night_main_disableable_brightness_seekbar" />
+                    app:layout_constraintTop_toBottomOf="@+id/settings_behavior_main_disableable_brightness_seekbar" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </LinearLayout>
     </ScrollView>
