--- a/app/src/main/res/layout/activity_settings_detail.xml
+++ b/app/src/main/res/layout/activity_settings_detail.xml
@@ -37,7 +37,8 @@
                 app:layout_constraintBottom_toTopOf="@+id/settings_detail_main_attach_point"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_weight="2">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/settings_detail_card_attach_point"
@@ -91,7 +92,8 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/settings_detail_card" />
+                app:layout_constraintTop_toBottomOf="@+id/settings_detail_card"
+                app:layout_constraintVertical_weight="3" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
